# Public-Test-Repo

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py
src/: main.py
src/api/: auth.py  comments.py  tasks.py
src/models/: task.py  user.py
src/services/: auth_service.py  database.py  notification_service.py  task_service.py
src/utils/: helpers.py  validators.py
tests/: test_auth.py  test_tasks.py
